sfdx-source/main/default/objects/UserServicePresence/fields/PC_Current_status_duration__c.field-meta.xml
<CustomField>
    <fullName>PC_Current_status_duration__c</fullName>
    <formula>IF( ISNULL(StatusEndDate),(NOW() - StatusStartDate) * (24*3600),(StatusEndDate - StatusStartDate) * (24*3600) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status Duration in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>