sfdx-source/main/default/objects/UserServicePresence/fields/PC_Offline_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PC_Offline_End_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offline End Date/Time</label>
    <type>DateTime</type>
</CustomField>