sfdx-source/main/default/objects/UserServicePresence/fields/PC_Percentage_of_Time_at_Capacity__c.field-meta.xml
<CustomField>
    <fullName>PC_Percentage_of_Time_at_Capacity__c</fullName>
    <formula>AtCapacityDuration / StatusDuration</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of Time at Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>