sfdx-source/main/default/objects/UserServicePresence/fields/PC_Teams_Channel__c.field-meta.xml
<CustomField>
    <fullName>PC_Teams_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC Teams Channel</label>
    <type>Checkbox</type>
</CustomField>